--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "webpack serve --config webpack/webpack.config.js --env env=dev",
     "build": "webpack --config webpack/webpack.config.js --env env=prod",
+    "build:css": "tailwind build src/style.css -o public/style.css",
     "lint": "eslint --fix \"./src/**/*.{js,jsx,ts,tsx,json}\"",
     "format": "prettier --write \"./src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -20,9 +21,14 @@
   "author": "Sandra Vargas",
   "license": "ISC",
   "dependencies": {
+    "autoprefixer": "^10.2.6",
+    "postcss-cli": "^8.3.1",
+    "postcss-loader": "^6.1.1",
     "react": "^17.0.2",
+    "react-dev-utils": "^11.0.4",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "tailwindcss": "^2.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
@@ -55,6 +61,7 @@
     "sass-loader": "^12.1.0",
     "style-loader": "^3.0.0",
     "typescript": "^4.3.5",
+    "typescript-plugin-css-modules": "^3.4.0",
     "webpack": "^5.42.1",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2",
