--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,6 @@
       }
     ]
   },
-  // "include": ["src/**/*", "src/declarations.d.ts"]
-  "include": ["src/**/*"]
+  "include": ["src/**/*", "src/declarations.d.ts"]
+  // "include": ["src/**/*"]
 }
