--- a/package.json
+++ b/package.json
@@ -21,6 +21,11 @@
   "author": "Sandra Vargas",
   "license": "ISC",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-brands-svg-icons": "^5.15.3",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/react-fontawesome": "^0.1.14",
+    "@heroicons/react": "^1.0.2",
     "autoprefixer": "^10.2.6",
     "postcss-cli": "^8.3.1",
     "postcss-loader": "^6.1.1",
