Update postcss config to purge and compress tailwind css

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "webpack serve --config webpack/webpack.config.js --env env=dev",
     "build": "webpack --config webpack/webpack.config.js --env env=prod",
-    "build:css": "tailwind build src/style.css -o public/style.css",
+    "build:css": "postcss src/style.css -o public/style.css",
     "lint": "eslint --fix \"./src/**/*.{js,jsx,ts,tsx,json}\"",
     "format": "prettier --write \"./src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -27,8 +27,8 @@
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@heroicons/react": "^1.0.2",
     "autoprefixer": "^10.2.6",
+    "cssnano": "^5.0.6",
     "postcss-cli": "^8.3.1",
-    "postcss-loader": "^6.1.1",
     "react": "^17.0.2",
     "react-dev-utils": "^11.0.4",
     "react-dom": "^17.0.2",
@@ -40,6 +40,7 @@
     "@babel/preset-env": "^7.14.7",
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.14.5",
+    "@fullhuman/postcss-purgecss": "^4.0.3",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
     "@types/react": "^17.0.13",
     "@types/react-dom": "^17.0.8",
@@ -60,6 +61,8 @@
     "husky": "^4.3.8",
     "lint-staged": "^11.0.0",
     "node-sass": "^6.0.1",
+    "postcss": "^8.3.5",
+    "postcss-loader": "^6.1.1",
     "prettier": "^2.3.2",
     "react-refresh": "^0.9.0",
     "sass": "^1.35.1",
