--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build:css": "postcss src/style.css -o public/style.css",
     "lint": "eslint --fix \"./src/**/*.{js,jsx,ts,tsx,json}\"",
     "format": "prettier --write \"./src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepare": "husky install"
   },
   "keywords": [
     "React",
@@ -21,64 +22,58 @@
   "author": "Sandra Vargas",
   "license": "ISC",
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.35",
-    "@fortawesome/free-brands-svg-icons": "^5.15.3",
-    "@fortawesome/free-solid-svg-icons": "^5.15.3",
-    "@fortawesome/react-fontawesome": "^0.1.14",
-    "@heroicons/react": "^1.0.2",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-brands-svg-icons": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@heroicons/react": "^2.0.18",
     "autoprefixer": "^10.2.6",
-    "cssnano": "^5.0.6",
-    "postcss-cli": "^8.3.1",
-    "react": "^17.0.2",
-    "react-dev-utils": "^11.0.4",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^5.2.0",
-    "tailwindcss": "^2.2.4"
+    "cssnano": "^6.0.1",
+    "postcss-cli": "^10.1.0",
+    "react": "^18.2.0",
+    "react-dev-utils": "^12.0.1",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.11.2",
+    "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
     "@babel/preset-env": "^7.14.7",
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.14.5",
-    "@fullhuman/postcss-purgecss": "^4.0.3",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
-    "@types/react": "^17.0.13",
-    "@types/react-dom": "^17.0.8",
+    "@fullhuman/postcss-purgecss": "^5.0.0",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
+    "@types/react": "^18.2.7",
+    "@types/react-dom": "^18.2.4",
     "@types/react-router-dom": "^5.1.7",
-    "@typescript-eslint/eslint-plugin": "^4.28.2",
-    "@typescript-eslint/parser": "^4.28.2",
-    "babel-loader": "^8.2.2",
-    "css-loader": "^5.2.6",
-    "eslint": "^7.30.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.7",
+    "@typescript-eslint/parser": "^5.59.7",
+    "babel-loader": "^9.1.2",
+    "css-loader": "^6.8.1",
+    "eslint": "^8.41.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "html-webpack-plugin": "^5.3.2",
-    "husky": "^4.3.8",
-    "lint-staged": "^11.0.0",
-    "node-sass": "^6.0.1",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.2.2",
     "postcss": "^8.3.5",
-    "postcss-loader": "^6.1.1",
+    "postcss-loader": "^7.3.2",
     "prettier": "^2.3.2",
-    "react-refresh": "^0.9.0",
+    "react-refresh": "^0.14.0",
     "sass": "^1.35.1",
-    "sass-loader": "^12.1.0",
+    "sass-loader": "^13.3.1",
     "style-loader": "^3.0.0",
-    "typescript": "^4.3.5",
-    "typescript-plugin-css-modules": "^3.4.0",
+    "typescript": "^5.0.4",
+    "typescript-plugin-css-modules": "^5.0.1",
     "webpack": "^5.42.1",
-    "webpack-cli": "^4.7.2",
-    "webpack-dev-server": "^3.11.2",
+    "webpack-cli": "^5.1.1",
+    "webpack-dev-server": "^4.15.0",
     "webpack-merge": "^5.8.0"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
   },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx,json}": [
@@ -86,6 +81,7 @@
     ],
     "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
       "prettier --write"
-    ]
+    ],
+    "*.js": "eslint --cache --fix"
   }
 }
