--- a/package.json
+++ b/package.json
@@ -29,10 +29,13 @@
     "@heroicons/react": "^2.0.18",
     "autoprefixer": "^10.4.14",
     "cssnano": "^6.0.1",
+    "i18next": "^22.5.0",
+    "i18next-xhr-backend": "^3.2.2",
     "postcss-cli": "^10.1.0",
     "react": "^18.2.0",
     "react-dev-utils": "^12.0.1",
     "react-dom": "^18.2.0",
+    "react-i18next": "^12.3.1",
     "react-router-dom": "^6.11.2",
     "tailwindcss": "^3.3.2"
   },
@@ -63,6 +66,7 @@
     "postcss": "^8.4.24",
     "postcss-loader": "^7.3.2",
     "prettier": "^2.8.8",
+    "process": "^0.11.10",
     "react-refresh": "^0.14.0",
     "sass": "^1.62.1",
     "sass-loader": "^13.3.1",
