--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "autoprefixer": "^10.4.14",
     "cssnano": "^6.0.1",
     "i18next": "^22.5.0",
-    "i18next-xhr-backend": "^3.2.2",
+    "i18next-chained-backend": "^4.4.0",
+    "i18next-http-backend": "^2.2.1",
     "postcss-cli": "^10.1.0",
     "react": "^18.2.0",
     "react-dev-utils": "^12.0.1",
@@ -51,6 +52,7 @@
     "@typescript-eslint/eslint-plugin": "^5.59.7",
     "@typescript-eslint/parser": "^5.59.7",
     "babel-loader": "^9.1.2",
+    "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.8.1",
     "eslint": "^8.41.0",
     "eslint-config-prettier": "^8.8.0",
